add select functions for partition transform